tests/snapshots/integration__integration_tests__config_show__config_show_invalid_project_toml.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - show
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLAUDE_CONFIG_DIR: "[TEST_CLAUDE_CONFIG]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_MOCK_CONFIG_DIR: "[TEST_MOCK_CONFIG]"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
[36mUSER CONFIG[39m @ ~/.config/worktrunk/config.toml
[33m▲[39m [33mUser config: [1m[list] json-schema[22m is unset; a future release switches the JSON default to schema 2[39m
[2m↳[22m [2mTo apply: [4mwt config update[24m[22m
[2m○[22m Proposed diff:
[107m [0m [1mdiff --git a/config.toml/current b/config.toml/migrated[m
[107m [0m [1mindex a10f823..cea088e 100644[m
[107m [0m [1m--- a/config.toml/current[m
[107m [0m [1m+++ b/config.toml/migrated[m
[107m [0m [36m@@ -1 +1,4 @@[m
[107m [0m [31m-worktree-path = "../{{ repo }}.{{ branch }}"[m
[107m [0m \ No newline at end of file[m
[107m [0m [32m+[m[32mworktree-path = "../{{ repo }}.{{ branch }}"[m
[107m [0m [32m+[m
[107m [0m [32m+[m[32m[list][m
[107m [0m [32m+[m[32mjson-schema = 1[m

[107m [0m [2mworktree-path = [0m[2m[32m"../{{ repo }}.{{ branch }}"[0m
[2m↳[22m [2mOptional system config not found @ [2m/etc/xdg/worktrunk/config.toml[22m[22m

[36mPROJECT CONFIG[39m @ _REPO_/.config/wt.toml
[2m○[22m Identifier: [1m../origin[22m
[31m✗[39m [31mInvalid config[39m
[107m [0m TOML parse error at line 1, column 28
[107m [0m   |
[107m [0m 1 | invalid = [unclosed bracket
[107m [0m   |                            ^
[107m [0m unclosed array, expected `]`
[107m [0m [2minvalid = [unclosed bracket[0m

[36mSHELL INTEGRATION[39m
[33m▲[39m [33mShell integration not configured[39m
[2m↳[22m [2mTo configure, run [4mwt config shell install[24m[22m
[107m [0m Invoked as: [1m[PROJECT_ROOT]/target/[BUILD_MODE]/wt[22m

[36mOTHER[39m
[2m○[22m wt: [1m[VERSION][22m
[2m○[22m git: [1m[VERSION][22m
[2m○[22m Hyperlinks: [1minactive[22m

----- stderr -----
